modules/webserver/webserver_security_group.tf
resource "aws_security_group" "poc_webservers_alb" {
  tags = {
    Name = "${var.ENVIRONMENT}-poc-webservers-ALB"
  }
  name = "${var.ENVIRONMENT}-poc-webservers-ALB"
  description = "Created for poc"
  vpc_id      = var.vpc_id 

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }

  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
resource "aws_security_group" "poc_webservers"{
  tags = {
    Name = "${var.ENVIRONMENT}-poc-webservers"
  }
  
  name          = "${var.ENVIRONMENT}-poc-webservers"
  description   = "Created for poc"
  vpc_id        = var.vpc_id

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["${var.SSH_CIDR_WEB_SERVER}"]

  }

  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }
  
  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }
  
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
